# DeChat

./: CMakeLists.txt  README.md  compilation.yaml
aligner-correct/: Levenshtein_distance.h  correct_round1.h
